WIP website design
currently still HTML only, javascript will be added later

--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
-Hello World
+<!doctype html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet">
+  <title>ingur.ai</title>
+</head>
+<body class="bg-background text-white font-mono flex flex-col md:items-center md:h-screen justify-center">
+    <div class="container mx-auto max-w-screen-md md:my-6 p-4 md:rounded-lg bg-container">
+        <div class="relative flex items-center mb-4">
+            <div class="flex space-x-2">
+                <div class="w-3.5 h-3.5 bg-red rounded-full"></div>
+                <div class="w-3.5 h-3.5 bg-yellow rounded-full"></div>
+                <div class="w-3.5 h-3.5 bg-green rounded-full"></div>
+            </div>
+            <div class="absolute inset-0 flex justify-center items-center">
+                <span class="text-sm text-gray font-sans select-none">ingur.ai</span>
+            </div>
+        </div>
+        <div class="overflow-y-scroll pr-2 max-h-96 scrollbar-hide">
+            <div class="mb-2 select-none">
+                <div class="font-bold text-blue">~</div>
+                <div class="flex space-x-2">
+                    <div class="text-pink">
+                        ❯ 
+                    </div>
+                    <div class="">
+                        <div class="text-green font-bold">
+                            about me
+                        </div>
+                        <span class="select-text">
+                            👋 Hi, I'm Ingur Veken, MSc AI, developer and programming enthusiast.
+                        </span>                
+                    </div>
+                </div>
+            </div>
+            <div class="mb-2 select-none">
+                <div class="font-bold text-blue">~</div>
+                <div class="flex space-x-2">
+                    <div class="text-pink">
+                        ❯ 
+                    </div>
+                    <div class="">
+                        <div class="text-green font-bold">
+                            github
+                        </div>
+                        <a class="text-blue underline select-text" href="https://github.com/ingur">
+                            https://github.com/ingur
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-2 select-none">
+                <div class="font-bold text-blue">~</div>
+                <div class="flex space-x-2">
+                    <div class="text-pink">
+                        ❯ 
+                    </div>
+                    <div class="">
+                        <div class="text-green font-bold">
+                            linkedin 
+                        </div>
+                        <a class="text-blue underline select-text" href="https://www.linkedin.com/in/ingur">
+                            https://www.linkedin.com/in/ingur
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-2 select-none">
+                <div class="font-bold text-blue">~</div>
+                <div class="flex space-x-2">
+                    <div class="text-pink">
+                        ❯ 
+                    </div>
+                    <div class="">
+                        <div class="text-green font-bold">
+                            latest projects 
+                        </div>
+                        <span>
+                            - <a class="text-blue underline select-text" href="https://github.com/ingur/bitvit">bitvit</a>:
+                            Custom QAT Vision Transformer architecture (PyTorch).<br> 
+                        </span>
+                        <span>
+                            - <a class="text-blue underline select-text" href="https://github.com/ingur/magneto">magneto</a>:
+                            Custom torrent client with instant video streaming (golang).<br> 
+                        </span> 
+                        <span>
+                            - <a class="text-blue underline select-text" href="https://github.com/ingur/raylib-starter">raylib-starter</a>:
+                            Cross-platform raylib games, with hot-reloading (C++).<br> 
+                        </span>  
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="select-none">
+            <div class="font-bold text-blue">~</div>
+            <div class="flex space-x-2">
+                <div class="text-pink">❯</div>
+                <input class="bg-transparent text-white font-bold focus:outline-none" type="text" placeholder="Type your command...">
+            </div>
+        </div>
+    </div>
+    <div class="flex items-center justify-center space-x-2 mt-4 md:mt-0">        
+        <span> email me at: </span>
+        <a href="mailto:contact@ingur.ai">contact@ingur.ai</a>
+    </div>
+</body>
+</html>
