removed scrollbar on mobile view

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="text-sm text-gray font-sans select-none">ingur.ai</span>
             </div>
         </div>
-        <div class="overflow-y-scroll pr-2 max-h-96 scrollbar-hide">
+        <div class="overflow-y-scroll pr-2 md:max-h-96 scrollbar-hide">
             <div class="mb-2 select-none">
                 <div class="font-bold text-blue">~</div>
                 <div class="flex space-x-2">
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-    <div class="flex items-center justify-center space-x-2 mt-4 md:mt-0">        
+    <div class="flex items-center justify-center space-x-2 my-4 md:my-0">
         <span> email me at: </span>
         <a href="mailto:contact@ingur.ai">contact@ingur.ai</a>
     </div>
