fixed text selection

--- a/index.html
+++ b/index.html
@@ -85,18 +85,17 @@
                         <h2 class="text-green font-bold">
                             latest projects
                         </h2>
-                        <h3>
+                        <h3 class="select-text">
                             - <a class="text-blue underline select-text"
                                 href="https://github.com/ingur/bitvit">bitvit</a>:
                             Custom QAT Vision Transformer architecture (PyTorch).<br>
                         </h3>
-                        <h3>
-                            - <a class="text-blue underline select-text"
-                                href="https://github.com/ingur/magneto">magneto</a>:
+                        <h3 class="select-text">
+                            - <a class="text-blue underline" href="https://github.com/ingur/magneto">magneto</a>:
                             Custom torrent client with instant video streaming (golang).<br>
                         </h3>
-                        <h3>
-                            - <a class="text-blue underline select-text"
+                        <h3 class="select-text">
+                            - <a class="text-blue underline"
                                 href="https://github.com/ingur/raylib-starter">raylib-starter</a>:
                             Cross-platform raylib games, with hot-reloading (C++).<br>
                         </h3>
